<resources>
    <string name="app_name">B2C</string>
    <string name="next">下一步</string>
    <string name="go_shopping">继续购物</string>
    <string name="no_goods_text">您的购物车没有商品\n把心仪的商品放入购物车吧</string>
    <string name="redirect">点击进入</string>
    <string name="tip_double_click_exit">再次点击退出程序</string>
    <string name="main_home">首页</string>
    <string name="main_category">分类</string>
    <string name="main_find">发现</string>
    <string name="main_mine">我的</string>
    <string name="search_things">搜索 所有商品</string>
    <string name="search_history">历史搜索</string>
    <string name="clean_history">清空历史搜索</string>
    <string name="hint_username">用户名/邮箱/手机号</string>
    <string name="hint_password">密码</string>
    <string name="show_password">显示密码</string>
    <string name="save_password">记住密码</string>
    <string name="forget_password">你<b>忘记密码</b>了吗?</string>
    <string name="do_not_account">没有账户吗?</string>
    <string name="login_text"><b>登 陆</b></string>
    <string name="register_text"><b>注 册</b></string>
    <string name="register_check_bt_text"><b>获取验证码</b></string>
    <string name="register_phone_number"><b>请输入手机号</b></string>
    <string name="register_check_number"><b>验证短信中的数字</b></string>
    <string name="register_password"><b>请输入注册密码</b></string>
    <string name="register_password_re"><b>再次输入注册密码</b></string>
    <string name="user_deal">注册既视为同意<b>用户注册协议</b></string>
    <string name="username_empty">账户不能为空</string>
    <string name="password_empty">密码不能为空</string>
    <string name="user_account_say_hello">您好，</string>
    <string name="user_account_set">账户设置 ></string>
    <string name="my_order">我的订单</string>
    <string name="look_order">查看订单</string>
    <string name="need_pay">需要付款</string>
    <string name="take_goods">需要收货</string>
    <string name="need_evaluate">需要评价</string>
    <string name="need_service">售后服务</string>
    <string name="browse_history">浏览历史</string>
    <string name="you_like">为您推荐</string>
    <string name="help_feedback">帮助反馈</string>
    <string name="login_out">退出登陆</string>
</resources>
