<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:topbar="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.activity.MainActivity">

    <client.enterprise.b2c.widget.TopBar
        android:id="@+id/top_bar"
        android:layout_width="match_parent"
        android:layout_height="46dp"
        topbar:leftImgSrc="@mipmap/logo"
        topbar:rightImgSrc="@mipmap/shopping"
        topbar:my_title="Mybtoc.cn"
        topbar:my_titleLeftImg="@mipmap/search_icon"
        topbar:my_titleTextColor="#a6a6a6"/>

    <FrameLayout
        android:id="@+id/main_content"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

    </FrameLayout>

    <RadioGroup
        android:id="@+id/main_button_tabs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/tab_bg"
        android:orientation="horizontal">
        <RadioButton
            android:id="@+id/main_home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingLeft="0dp"
            android:drawableTop="@drawable/main_home_selector"
            android:button="@null"
            android:gravity="center"
            android:textColor="@drawable/main_text_color_selector"
            android:layout_marginBottom="3dp"
            android:textSize="10sp"
            android:text="@string/main_home"/>
        <RadioButton
            android:id="@+id/main_category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingLeft="0dp"
            android:drawableTop="@drawable/main_category_selector"
            android:button="@null"
            android:gravity="center"
            android:textColor="@drawable/main_text_color_selector"
            android:layout_marginBottom="3dp"
            android:textSize="10sp"
            android:text="@string/main_category"/>
        <RadioButton
            android:id="@+id/main_find"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingLeft="0dp"
            android:drawableTop="@drawable/main_find_selector"
            android:button="@null"
            android:gravity="center"
            android:textColor="@drawable/main_text_color_selector"
            android:layout_marginBottom="3dp"
            android:textSize="10sp"
            android:text="@string/main_find"/>
        <RadioButton
            android:id="@+id/main_mine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingLeft="0dp"
            android:drawableTop="@drawable/main_mine_selector"
            android:button="@null"
            android:gravity="center"
            android:textColor="@drawable/main_text_color_selector"
            android:layout_marginBottom="3dp"
            android:textSize="10sp"
            android:text="@string/main_mine"/>
    </RadioGroup>
</LinearLayout>
